fixed vh bug on safari

--- a/client/src/shared/Main/Main.css
+++ b/client/src/shared/Main/Main.css
@@ -15,6 +15,7 @@ main.main {
     main.main {
         width: 100%;
         height:60vh;
+        height: calc(var(--vh, 1vh) * 60);
         overflow-y:auto;
         padding:32px 48px;
     }
