--- a/client/src/shared/Sidebar/Sidebar.css
+++ b/client/src/shared/Sidebar/Sidebar.css
@@ -134,6 +134,7 @@
     .section {
         width: 100%;
         height:40vh;
+        height: calc(var(--vh, 1vh) * 40);
         overflow:hidden;
         padding:40px 0;
         position: fixed;
